cks/network-policies/cassandra-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ns: cassandra
  name: cassandra
